Enhanced dashboard with AI features - all personas working

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,84 @@
 ﻿# Python
 __pycache__/
 *.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
 venv/
+env/
+ENV/
+.venv/
 .env
 
-# IDE
+# IDE files
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
-# OS
+# Backup and temporary files
+backup_*/
+old_versions/
+*_backup_*/
+*_backup.*
+backup_*
+*backup*
+*.bak
+*.tmp
+*.temp
+*~
 .DS_Store
 Thumbs.db
 
-# Streamlit
-.streamlit/secrets.toml
+# Logs
+*.log
+logs/
 
-# Backups and Archives
-*_BACKUP/
-*_OLD/
-archive/
+# Data files (if sensitive)
+*.xlsx
+*.xls
+*.csv
+# Uncomment the line above if you don't want to track data files
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Streamlit
+.streamlit/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pytest
+.pytest_cache/
+.coverage
+htmlcov/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
